--- a/builder.css
+++ b/builder.css
@@ -10,7 +10,7 @@
         height: 100%;
         transition: background-color 500ms ease-in-out;
     }
-   .empty-connected::after {
+   .connected:empty::after {
     content: attr(data-content);
     position: absolute;
     text-align: center;
